--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "Paw-APIBlueprintGenerator",
   "version": "1.1.1",
+  "dependencies": {
+    "drafter.js": "^2.1.0"
+  },
   "devDependencies": {
     "coffee-script": "latest",
     "mkdirp": "~0.5.0",
