--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: node_js
-node_js:
-- '0.10'
-before_install:
-- npm install coffee-script
-before_script:
-- ./node_modules/.bin/cake archive
-script:
-- ./node_modules/.bin/cake test
+node_js: '0.10'
+script: npm test
+after_script: npm run archive
+
 deploy:
   provider: releases
   api_key:
