feat: Import via API Elements

--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "chai": "3.4.1",
     "coffee-loader": "",
     "coffee-script": "latest",
-    "drafter.js": "^2.6.4",
+    "drafter.js": "^2.6.3",
+    "fury": "^2.3.0",
+    "fury-adapter-apib-parser": "^0.6.1",
+    "glob": "",
     "mkdirp": "~0.5.0",
     "mocha": "latest",
     "ncp": "~1.0.1",
