--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
     "babel-runtime": ""
   },
   "devDependencies": {
-    "babel-core": "",
-    "babel-loader": "",
-    "babel-plugin-transform-decorators": "",
-    "babel-plugin-transform-decorators-legacy": "",
-    "babel-plugin-transform-runtime": "",
-    "babel-preset-es2015": "",
-    "babel-preset-stage-0": "",
-    "babel-preset-stage-1": "",
-    "babel-preset-stage-2": "",
-    "babel-preset-stage-3": "",
-    "babel-register": "",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-decorators": "^6.22.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0",
+    "babel-register": "^6.22.0",
     "chai": "3.4.1",
-    "coffee-loader": "",
-    "coffee-script": "latest",
+    "coffee-loader": "^0.7.2",
+    "coffee-script": "^1.12.2",
     "drafter.js": "^2.6.3",
     "fury": "^2.3.0",
     "fury-adapter-apib-parser": "^0.6.1",
-    "glob": "",
+    "glob": "^7.0.5",
     "mkdirp": "~0.5.0",
-    "mocha": "latest",
+    "mocha": "^3.2.0",
     "ncp": "~1.0.1",
     "webpack": "^2.2.0"
   }
