--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "chai": "3.4.1",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.12.2",
-    "fury": "^2.3.0",
-    "fury-adapter-apib-parser": "^0.6.1",
+    "fury": "^3.0.0-beta.10",
+    "fury-adapter-apib-parser": "^0.14.0",
     "glob": "^7.0.5",
     "mkdirp": "~0.5.0",
     "mocha": "^3.2.0",
