--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chai": "3.4.1",
+    "chai": "^4.2.0",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.12.2",
     "fury": "^3.0.0-beta.10",
