--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "url": "https://github.com/apiaryio/Paw-APIBlueprintImporter"
   },
   "scripts": {
-    "test": "mocha",
+    "archive": "cake archive",
     "build": "cake build",
     "install": "cake install",
-    "archive": "cake archive",
+    "lint": "eslint src/APIElementImporter.js test/",
+    "test": "mocha",
     "watch": "cake watch"
   },
   "dependencies": {
@@ -32,6 +33,9 @@
     "babel-register": "^6.22.0",
     "chai": "^4.2.0",
     "coffee-script": "^1.12.2",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.3",
     "fury": "^3.0.0-beta.10",
     "fury-adapter-apib-parser": "^0.14.0",
     "glob": "^7.0.5",
